include/render.h


typedef struct mpv_render_context mpv_render_context;
void mpv_render_context_free(mpv_render_context *ctx);