lib/mpv_bindings.dart


  /// Destroy the mpv renderer state.
  ///
  /// If video is still active (e.g. a file playing), video will be disabled
  /// forcefully.
  ///
  /// @param ctx a valid render context. After this function returns, this is not
  /// a valid pointer anymore. NULL is also allowed and does nothing.
  void mpv_render_context_free(
    ffi.Pointer<mpv_render_context> ctx,
  ) {
    return _mpv_render_context_free(
      ctx,
    );
  }

  late final _mpv_render_context_freePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<mpv_render_context>)>>('mpv_render_context_free');
  late final _mpv_render_context_free = _mpv_render_context_freePtr
      .asFunction<void Function(ffi.Pointer<mpv_render_context>)>();

  /// Set the callback that notifies you when a new video frame is available, or
  /// if the video display configuration somehow changed and requires a redraw.
  /// Similar to mpv_set_wakeup_callback(), you must not call any mpv API from
  /// the callback, and all the other listed restrictions apply (such as not
  /// exiting the callback by throwing exceptions).
  ///
  /// @param callback callback(callback_ctx) is called if the frame should be
  /// redrawn
  /// @param callback_ctx opaque argument to the callback
  void mpv_opengl_cb_set_update_callback(
    ffi.Pointer<mpv_opengl_cb_context> ctx,
    mpv_opengl_cb_update_fn callback,
    ffi.Pointer<ffi.Void> callback_ctx,
  ) {
    return _mpv_opengl_cb_set_update_callback(
      ctx,
      callback,
      callback_ctx,
    );
  }

  late final _mpv_opengl_cb_set_update_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<mpv_opengl_cb_context>,
              mpv_opengl_cb_update_fn,
              ffi.Pointer<ffi.Void>)>>('mpv_opengl_cb_set_update_callback');
  late final _mpv_opengl_cb_set_update_callback =
      _mpv_opengl_cb_set_update_callbackPtr.asFunction<
          void Function(ffi.Pointer<mpv_opengl_cb_context>,
              mpv_opengl_cb_update_fn, ffi.Pointer<ffi.Void>)>();

  /// Initialize the mpv OpenGL state. This retrieves OpenGL function pointers via
  /// get_proc_address, and creates OpenGL objects needed by mpv internally. It
  /// will also call APIs needed for rendering hardware decoded video in OpenGL,
  /// according to the mpv "hwdec" option.
  ///
  /// You must free the associated state at some point by calling the
  /// mpv_opengl_cb_uninit_gl() function. Not doing so may result in memory leaks
  /// or worse.
  ///
  /// @param exts optional _additional_ extension string, can be NULL
  /// @param get_proc_address callback used to retrieve function pointers to OpenGL
  /// functions. This is used for both standard functions
  /// and extension functions. (The extension string is
  /// checked whether extensions are really available.)
  /// The callback will be called from this function only
  /// (it is not stored and never used later).
  /// Usually, GL context APIs do this for you (e.g. with
  /// glXGetProcAddressARB or wglGetProcAddress), but
  /// some APIs do not always return pointers for all
  /// standard functions (even if present); in this case
  /// you have to compensate by looking up these functions
  /// yourself.
  /// @param get_proc_address_ctx arbitrary opaque user context passed to the
  /// get_proc_address callback
  /// @return error code (same as normal mpv_* API), including but not limited to:
  /// MPV_ERROR_UNSUPPORTED: the OpenGL version is not supported
  /// (or required extensions are missing)
  /// MPV_ERROR_INVALID_PARAMETER: the OpenGL state was already initialized
  int mpv_opengl_cb_init_gl(
    ffi.Pointer<mpv_opengl_cb_context> ctx,
    ffi.Pointer<ffi.Char> exts,
    mpv_opengl_cb_get_proc_address_fn get_proc_address,
    ffi.Pointer<ffi.Void> get_proc_address_ctx,
  ) {
    return _mpv_opengl_cb_init_gl(
      ctx,
      exts,
      get_proc_address,
      get_proc_address_ctx,
    );
  }

  late final _mpv_opengl_cb_init_glPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_opengl_cb_context>,
              ffi.Pointer<ffi.Char>,
              mpv_opengl_cb_get_proc_address_fn,
              ffi.Pointer<ffi.Void>)>>('mpv_opengl_cb_init_gl');
  late final _mpv_opengl_cb_init_gl = _mpv_opengl_cb_init_glPtr.asFunction<
      int Function(ffi.Pointer<mpv_opengl_cb_context>, ffi.Pointer<ffi.Char>,
          mpv_opengl_cb_get_proc_address_fn, ffi.Pointer<ffi.Void>)>();

  /// Render video. Requires that the OpenGL state is initialized.
  ///
  /// The video will use the full provided framebuffer. Options like "panscan" are
  /// applied to determine which part of the video should be visible and how the
  /// video should be scaled. You can change these options at runtime by using the
  /// mpv property API.
  ///
  /// The renderer will reconfigure itself every time the output rectangle/size
  /// is changed. (If you want to do animations, it might be better to do the
  /// animation on a FBO instead.)
  ///
  /// This function implicitly pulls a video frame from the internal queue and
  /// renders it. If no new frame is available, the previous frame is redrawn.
  /// The update callback set with mpv_opengl_cb_set_update_callback() notifies
  /// you when a new frame was added.
  ///
  /// @param fbo The framebuffer object to render on. Because the renderer might
  /// manage multiple FBOs internally for the purpose of video
  /// postprocessing, it will always bind and unbind FBOs itself. If
  /// you want mpv to render on the main framebuffer, pass 0.
  /// @param w Width of the framebuffer. This is either the video size if the fbo
  /// parameter is 0, or the allocated size of the texture backing the
  /// fbo. The renderer will always use the full size of the fbo.
  /// @param h Height of the framebuffer. Same as with the w parameter, except
  /// that this parameter can be negative. In this case, the video
  /// frame will be rendered flipped.
  /// @return 0
  int mpv_opengl_cb_draw(
    ffi.Pointer<mpv_opengl_cb_context> ctx,
    int fbo,
    int w,
    int h,
  ) {
    return _mpv_opengl_cb_draw(
      ctx,
      fbo,
      w,
      h,
    );
  }

  late final _mpv_opengl_cb_drawPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_opengl_cb_context>, ffi.Int, ffi.Int,
              ffi.Int)>>('mpv_opengl_cb_draw');
  late final _mpv_opengl_cb_draw = _mpv_opengl_cb_drawPtr.asFunction<
      int Function(ffi.Pointer<mpv_opengl_cb_context>, int, int, int)>();

  /// Deprecated. Use mpv_opengl_cb_draw(). This function is equivalent to:
  ///
  /// int mpv_opengl_cb_render(mpv_opengl_cb_context *ctx, int fbo, int vp[4])
  /// { return mpv_opengl_cb_draw(ctx, fbo, vp[2], vp[3]); }
  ///
  /// vp[0] and vp[1] used to have a meaning, but are ignored in newer versions.
  ///
  /// This function will be removed in the future without version bump (this API
  /// was never marked as stable).
  int mpv_opengl_cb_render(
    ffi.Pointer<mpv_opengl_cb_context> ctx,
    int fbo,
    ffi.Pointer<ffi.Int> vp,
  ) {
    return _mpv_opengl_cb_render(
      ctx,
      fbo,
      vp,
    );
  }

  late final _mpv_opengl_cb_renderPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_opengl_cb_context>, ffi.Int,
              ffi.Pointer<ffi.Int>)>>('mpv_opengl_cb_render');
  late final _mpv_opengl_cb_render = _mpv_opengl_cb_renderPtr.asFunction<
      int Function(
          ffi.Pointer<mpv_opengl_cb_context>, int, ffi.Pointer<ffi.Int>)>();

  /// Tell the renderer that a frame was flipped at the given time. This is
  /// optional, but can help the player to achieve better timing.
  ///
  /// Note that calling this at least once informs libmpv that you will use this
  /// function. If you use it inconsistently, expect bad video playback.
  ///
  /// If this is called while no video or no OpenGL is initialized, it is ignored.
  ///
  /// @param time The mpv time (using mpv_get_time_us()) at which the flip call
  /// returned. If 0 is passed, mpv_get_time_us() is used instead.
  /// Currently, this parameter is ignored.
  /// @return error code
  int mpv_opengl_cb_report_flip(
    ffi.Pointer<mpv_opengl_cb_context> ctx,
    int time,
  ) {
    return _mpv_opengl_cb_report_flip(
      ctx,
      time,
    );
  }

  late final _mpv_opengl_cb_report_flipPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_opengl_cb_context>,
              ffi.Int)>>('mpv_opengl_cb_report_flip');
  late final _mpv_opengl_cb_report_flip = _mpv_opengl_cb_report_flipPtr
      .asFunction<int Function(ffi.Pointer<mpv_opengl_cb_context>, int)>();

  /// Destroy the mpv OpenGL state.
  ///
  /// If video is still active (e.g. a file playing), video will be disabled
  /// forcefully.
  ///
  /// Calling this multiple times is ok.
  ///
  /// @return error code
  int mpv_opengl_cb_uninit_gl(
    ffi.Pointer<mpv_opengl_cb_context> ctx,
  ) {
    return _mpv_opengl_cb_uninit_gl(
      ctx,
    );
  }

  late final _mpv_opengl_cb_uninit_glPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_opengl_cb_context>)>>('mpv_opengl_cb_uninit_gl');
  late final _mpv_opengl_cb_uninit_gl = _mpv_opengl_cb_uninit_glPtr
      .asFunction<int Function(ffi.Pointer<mpv_opengl_cb_context>)>();

  /// Add a custom stream protocol. This will register a protocol handler under
  /// the given protocol prefix, and invoke the given callbacks if an URI with the
  /// matching protocol prefix is opened.
  ///
  /// The "ro" is for read-only - only read-only streams can be registered with
  /// this function.
  ///
  /// The callback remains registered until the mpv core is registered.
  ///
  /// If a custom stream with the same name is already registered, then the
  /// MPV_ERROR_INVALID_PARAMETER error is returned.
  ///
  /// @param protocol protocol prefix, for example "foo" for "foo://" URIs
  /// @param user_data opaque pointer passed into the mpv_stream_cb_open_fn
  /// callback.
  /// @return error code
  int mpv_stream_cb_add_ro(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> protocol,
    ffi.Pointer<ffi.Void> user_data,
    mpv_stream_cb_open_ro_fn open_fn,
  ) {
    return _mpv_stream_cb_add_ro(
      ctx,
      protocol,
      user_data,
      open_fn,
    );
  }

  late final _mpv_stream_cb_add_roPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>,
              mpv_stream_cb_open_ro_fn)>>('mpv_stream_cb_add_ro');
  late final _mpv_stream_cb_add_ro = _mpv_stream_cb_add_roPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Void>, mpv_stream_cb_open_ro_fn)>();
}

class mpv_handle extends ffi.Opaque {}

/// List of error codes than can be returned by API functions. 0 and positive
/// return values always mean success, negative values are always errors.
abstract class mpv_error {
  /// No error happened (used to signal successful operation).
  /// Keep in mind that many API functions returning error codes can also
  /// return positive values, which also indicate success. API users can
  /// hardcode the fact that ">= 0" means success.
  static const int MPV_ERROR_SUCCESS = 0;

  /// The event ringbuffer is full. This means the client is choked, and can't
  /// receive any events. This can happen when too many asynchronous requests
  /// have been made, but not answered. Probably never happens in practice,
  /// unless the mpv core is frozen for some reason, and the client keeps
  /// making asynchronous requests. (Bugs in the client API implementation
  /// could also trigger this, e.g. if events become "lost".)
  static const int MPV_ERROR_EVENT_QUEUE_FULL = -1;

  /// Memory allocation failed.
  static const int MPV_ERROR_NOMEM = -2;
